recheck candidate submit

--- a/pairing_algorithm/Candidate Submit Recheck.ipynb
+++ b/pairing_algorithm/Candidate Submit Recheck.ipynb
@@ -3,13 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "source": [
-    "ls"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "(1) Pairing Agglomerative Hierarchical Clustering.ipynb\r\n",
       "(1) Pairing Optimization.ipynb\r\n",
@@ -27,57 +25,54 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "ls"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Prepare Recheck Table"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "direct = pd.read_excel('application_score.xlsx', sheet_name='direct')\n",
     "grey = pd.read_excel('application_score.xlsx', sheet_name='grey_score')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "direct_id = direct['รหัสนิสิต']\n",
     "direct_id.dropna(inplace = True)\n",
     "#direct_id"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "source": [
-    "final_table = grey[['รหัสนิสิต', 'Status (Y/G/N)']]\n",
-    "final_table.columns = ['ID', 'Status']\n",
-    "final_table.head()"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -141,34 +136,37 @@
        "4  6131821821      Y"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "final_table = grey[['รหัสนิสิต', 'Status (Y/G/N)']]\n",
+    "final_table.columns = ['ID', 'Status']\n",
+    "final_table.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Concat\n",
     "temp_direct = pd.DataFrame(direct_id)\n",
     "temp_direct.columns = ['ID']\n",
     "temp_direct['Status'] = 'D'"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "source": [
-    "final_table = pd.concat([temp_direct, final_table], ignore_index=True)\n",
-    "final_table.head()"
-   ],
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -232,29 +230,22 @@
        "4  6131801221      D"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {
-    "scrolled": true
-   }
+   "source": [
+    "final_table = pd.concat([temp_direct, final_table], ignore_index=True)\n",
+    "final_table.head()"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "source": [
-    "# Convert status to score and save to csv\n",
-    "score_table = final_table.copy()\n",
-    "score_table['application_rank'] = final_table['Status'].map({\n",
-    "    'D': 4, 'Y': 3, 'GP': 2, 'GN': 1\n",
-    "})\n",
-    "score_table.drop(['Status'], axis = 1, inplace = True)\n",
-    "score_table"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/html": [
        "<div>\n",
@@ -657,29 +648,36 @@
        "[108 rows x 2 columns]"
       ]
      },
+     "execution_count": 8,
      "metadata": {},
-     "execution_count": 8
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Convert status to score and save to csv\n",
+    "score_table = final_table.copy()\n",
+    "score_table['application_rank'] = final_table['Status'].map({\n",
+    "    'D': 4, 'Y': 3, 'GP': 2, 'GN': 1\n",
+    "})\n",
+    "score_table.drop(['Status'], axis = 1, inplace = True)\n",
+    "score_table"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Check with raw input table"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "source": [
-    "ls"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "(1) Pairing Agglomerative Hierarchical Clustering.ipynb\r\n",
       "(1) Pairing Optimization.ipynb\r\n",
@@ -697,20 +695,33 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "ls"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "raw = pd.read_csv('raw_example.csv')"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60317499221\n",
+      "60317499221\n"
+     ]
+    }
+   ],
    "source": [
     "raw_id = raw['เลขประจำตัวนิสิต'].tolist()\n",
     "\n",
@@ -718,34 +729,16 @@
     "for val in raw_id:\n",
     "    if val not in score_table['ID'].tolist():\n",
     "        print(val)"
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "60317499221\n",
-      "60317499221\n"
-     ]
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "source": [
-    "# Check if there is any ID in database that doesn't yet fill in\n",
-    "not_filled = []\n",
-    "for val in score_table['ID'].tolist():\n",
-    "    if val not in raw_id:\n",
-    "        not_filled.append(val)\n",
-    "        print(val)"
-   ],
+   "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "6031749221\n",
       "6130459121\n",
@@ -756,45 +749,52 @@
      ]
     }
    ],
-   "metadata": {}
+   "source": [
+    "# Check if there is any ID in database that doesn't yet fill in\n",
+    "not_filled = []\n",
+    "for val in score_table['ID'].tolist():\n",
+    "    if val not in raw_id:\n",
+    "        not_filled.append(val)\n",
+    "        print(val)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[6130459121, 6131894621, 6131734921, 6030359021, 6130808521]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "not_filled\n",
     "\n",
     "# Remove the first (misspell when fill)\n",
     "not_filled = not_filled[1:]\n",
     "not_filled"
-   ],
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "[6130459121, 6131894621, 6131734921, 6030359021, 6130808521]"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 15
-    }
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# 5 ตรอง / 1 รัตนวงศ์ / 2 อริญชย์ / 3 ชญิศรา / 4 ปรานนท์"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.4 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -808,7 +808,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aa018bb2191242c107f603affa8aa72d80269fa9ff3d19c5b282c8e90c6a524e"
+   }
   }
  },
  "nbformat": 4,
